@@ -1,0 +1,188 @@
+package com.planet_ink.coffee_mud.Abilities.Prayers;
+import com.planet_ink.coffee_mud.core.interfaces.*;
+import com.planet_ink.coffee_mud.core.*;
+import com.planet_ink.coffee_mud.core.collections.*;
+import com.planet_ink.coffee_mud.Abilities.interfaces.*;
+import com.planet_ink.coffee_mud.Areas.interfaces.*;
+import com.planet_ink.coffee_mud.Behaviors.interfaces.*;
+import com.planet_ink.coffee_mud.CharClasses.interfaces.*;
+import com.planet_ink.coffee_mud.Commands.interfaces.*;
+import com.planet_ink.coffee_mud.Common.interfaces.*;
+import com.planet_ink.coffee_mud.Exits.interfaces.*;
+import com.planet_ink.coffee_mud.Items.interfaces.*;
+import com.planet_ink.coffee_mud.Libraries.interfaces.*;
+import com.planet_ink.coffee_mud.Locales.interfaces.*;
+import com.planet_ink.coffee_mud.MOBS.interfaces.*;
+import com.planet_ink.coffee_mud.Races.interfaces.*;
+
+import java.util.*;
+
+/*
+   Copyright 2024-2024 Bo Zimmerman
+
+   Licensed under the Apache License, Version 2.0 (the "License");
+   you may not use this file except in compliance with the License.
+   You may obtain a copy of the License at
+
+	   http://www.apache.org/licenses/LICENSE-2.0
+
+   Unless required by applicable law or agreed to in writing, software
+   distributed under the License is distributed on an "AS IS" BASIS,
+   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+   See the License for the specific language governing permissions and
+   limitations under the License.
+*/
+public class Prayer_Pacify extends Prayer
+{
+	@Override
+	public String ID()
+	{
+		return "Prayer_Pacify";
+	}
+
+	private final static String localizedName = CMLib.lang().L("Pacify");
+
+	@Override
+	public String name()
+	{
+		return localizedName;
+	}
+
+	private final static String localizedStaticDisplay = CMLib.lang().L("(Pacified)");
+
+	@Override
+	public String displayText()
+	{
+		return localizedStaticDisplay;
+	}
+
+	@Override
+	public int abstractQuality()
+	{
+		return Ability.QUALITY_MALICIOUS;
+	}
+
+	@Override
+	public int classificationCode()
+	{
+		return Ability.ACODE_PRAYER|Ability.DOMAIN_NEUTRALIZATION;
+	}
+
+	@Override
+	public long flags()
+	{
+		return Ability.FLAG_HOLY;
+	}
+
+	@Override
+	protected int canAffectCode()
+	{
+		return Ability.CAN_MOBS;
+	}
+
+	@Override
+	protected int canTargetCode()
+	{
+		return Ability.CAN_MOBS;
+	}
+
+	@Override
+	public void unInvoke()
+	{
+		// undo the affects of this spell
+		if(!(affected instanceof MOB))
+			return;
+		final MOB mob=(MOB)affected;
+
+		super.unInvoke();
+
+		if(canBeUninvoked())
+			mob.tell(L("Your passivity fades."));
+	}
+
+	@Override
+	public int castingQuality(final MOB mob, final Physical target)
+	{
+		if(mob!=null)
+		{
+			if(CMLib.flags().isEvil(mob))
+				return Ability.QUALITY_INDIFFERENT;
+
+			if(CMLib.flags().isNeutral(mob)&&(CMLib.dice().roll(1,2,0)==1))
+				return Ability.QUALITY_INDIFFERENT;
+		}
+		return super.castingQuality(mob,target);
+	}
+
+	@Override
+	public boolean okMessage(final Environmental myHost, final CMMsg msg)
+	{
+		if(((msg.targetMajor()&CMMsg.MASK_MALICIOUS)>0)
+		&&(!CMath.bset(msg.sourceMajor(),CMMsg.MASK_ALWAYS))
+		&&(msg.target() instanceof MOB)
+		&&(msg.source()!=msg.target()))
+		{
+			if(msg.amITarget(affected))
+				unInvoke();
+			else
+			if(msg.source()==affected)
+			{
+				if(msg.source().getVictim()!=null)
+				{
+					msg.source().makePeace(true);
+					msg.source().setVictim(null);
+				}
+				msg.source().tell(L("You feel too passive to do that."));
+				if(((MOB)msg.target()).getVictim()==affected)
+				{
+					((MOB)msg.target()).makePeace(true);
+					((MOB)msg.target()).setVictim(null);
+				}
+				return false;
+			}
+		}
+		return super.okMessage(myHost,msg);
+	}
+
+	@Override
+	public boolean invoke(final MOB mob, final List<String> commands, final Physical givenTarget, final boolean auto, final int asLevel)
+	{
+		final MOB target=getTarget(mob,commands,givenTarget);
+		if(target==null)
+			return false;
+
+		if(!super.invoke(mob,commands,givenTarget,auto,asLevel))
+			return false;
+
+		final boolean success=proficiencyCheck(mob,0,auto);
+
+		if(success)
+		{
+			final CMMsg msg=CMClass.getMsg(mob,target,this,verbalCastCode(mob,target,auto),auto?L("<T-NAME> become(s) pacified!"):L("^S<S-NAME> @x1 passively over <T-NAMESELF>!^?",prayWord(mob)));
+			if(mob.location().okMessage(mob,msg))
+			{
+				mob.location().send(mob,msg);
+				if(msg.value()<=0)
+				{
+					if(target.isInCombat())
+					{
+						target.tell(L("You feel at peace."));
+						target.makePeace(true);
+						for(final Enumeration<MOB> m = mob.location().inhabitants();m.hasMoreElements();)
+						{
+							final MOB M = m.nextElement();
+							if(M.getVictim()==target)
+								M.makePeace(true);
+						}
+						maliciousAffect(mob,target,asLevel,CMProps.getIntVar(CMProps.Int.TICKSPERMUDMONTH),-1);
+					}
+				}
+			}
+		}
+		else
+			return maliciousFizzle(mob,target,L("<S-NAME> @x1 passively over <T-YOUPOSS>, but there is no peace.",prayWord(mob)));
+
+		// return whether it worked
+		return success;
+	}
+}
