@@ -1905,6 +1905,14 @@ Example  : pray "omnipresence"\n\r\
 This prayer causes the presence of the caster to be divinely expanded to numerous nearby \
 locations.  The number of surrounding locations expands as the caster gains levels.
 
+PRAYER_PACIFY=<ABILITY>\
+Usage    : PRAY PACIFY [TARGET NAME]\n\r\
+Example  : pray pacify orc\n\r\
+This prayer fills the target with passive non-aggressive feelings.  It will cause \
+the target to immediately stop fighting, and anyone fighting them to stop as well. \
+Further, they will be unable to start combat with anyone else for a time, though \
+the prayer is neutralized if they are attacked.
+
 PRAYER_PARALYZE=<ABILITY>\
 Usage    : PRAY PARALYZE [TARGET NAME]\n\r\
 Example  : pray paralyze orc\n\r\
